# galerkin-nn

./: .gitignore  README.md  galerkin_nn_heat_1D-warmLearning.py  pyproject.toml
.devcontainer/: devcontainer.json
docs/: DEV_NOTES.md  overview.md  quadratures.md
examples/: dd_disk_rectangle.py  dd_rectangle.py  dd_rectangle_4dom.py  dd_string.py  poisson1D.py  poisson1D_jump_dd.py  poisson1D_string.py  poisson1D_string_dd.py  poisson2D_disk.py  poisson2D_rectangle.py  poisson_1D.py  steady_heat1D_string.py  steady_heat2D_disk.py  steady_heat2D_disk_piecewiseK.py  steady_heat2D_robin_disk.py  steady_heat2D_robin_disk_piecewiseK.py  test_dd_quadratures.py  test_quadratures.py
galerkin-nn/: GalerkinNN.py  galerkin-nn.py  galerkin_nn.py  gnn-classes-NON-WORKING.py  gnn-functional.py  gnn.py  playground.ipynb  utils.py
galerkinnn/: galerkin_nn.py  galerkin_nn_heat_1D.py  galerkin_nn_poisson_1D.py
legacy/: galerkin_nn.py  galerkin_nn_poisson_1D.py
src/galerkin_nn/: __init__.py  domain.py  nn.py  pde.py  solvers.py
src/galerkinnn/: __init__.py  formulations.py  pou.py  quadratures.py  solver.py  utils.py
tests/: test_domain.py
