[project]
name = "galerkin-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alonso Ogueda", email = "alonso.ogueda@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "flax>=0.10.6",
    "ipykernel>=6.29.5",
    "jax[cuda12]>=0.6.0",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "optax>=0.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"